[package]
name = "curve_fever"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mockall = "0.12.1"
mockall_double = "0.3.1"
rand = "0.8.5"
terminal_size = "0.3.0"

[dev-dependencies]
mockall = "0.12.1"
